--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/src/assets/img/ecomotive logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoMotive</title>
     <script src="https://cdn.roboflow.com/0.2.26/roboflow.js"></script> 
